# staystation

./: .env  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
dev_resources/: proposal.txt
docker/: Dockerfile  export_model.py  inference_server.py
staystation/: buzzer.py  camera.py  conditioning.py  inference_client.py  main.py  model.py  motor.py  test_motor.py
stubs/RPi/GPIO/: __init__.pyi
stubs/picamera2/: __init__.pyi
tests/: test_buzzer.py  test_detection_gui.py  test_model.py  test_model_unit.py  test_motor.py
