[tool.poetry]
name = "staystation"
version = "0.1.0"
description = "Raspberry Pi operant conditioning system to train a cat to stay"
authors = ["Leo Pekelis"]
readme = "README.md"
packages = [{include = "staystation"}]

[tool.poetry.dependencies]
python = "^3.11"
# GPIO libraries are Linux (Raspberry Pi) only
gpiozero = {version = "^2.0", markers = "sys_platform == 'linux'"}
"RPi.GPIO" = {version = "^0.7.1", markers = "sys_platform == 'linux'"}
pyserial = "^3.5"
requests = "^2.32"
Pillow = "^11.0"
pandas = "^2.2"

[tool.poetry.group.tests.dependencies]
# On Linux/Pi, opencv is installed via apt (python3-opencv) and accessed through
# system-site-packages. PyPI wheels are macOS-only.
opencv-python = {version = "^4.10", markers = "sys_platform == 'darwin'"}
matplotlib = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.4"
pre-commit = "^4.5.1"
mypy = "^1.10"
types-requests = "^2.32"
pandas-stubs = "^2.2"

[tool.poetry.scripts]
staystation = "staytation.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
mypy_path = "stubs"
warn_return_any = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# Vision group and Docker deps — not installed on dev machine
module = [
    "torch.*",
    "torchvision.*",
    "ultralytics.*",
    "fastapi.*",
    "uvicorn.*",
    "cv2.*",
    "matplotlib.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
